--- a/test_setting.ini
+++ b/test_setting.ini
@@ -151,3 +151,39 @@ gentime = 8:00
 nogencheck = 1
 before_alert_ment = 입니다.(위치: 크루마탑 3층)
 alert_ment = 입니다.(위치: 크루마탑 3층)
+
+bossname = ㅁ오르펜
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 상아탑)
+alert_ment = 입니다.(위치: 상아탑)
+
+bossname = ㅁ레피로
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 포자의 바다)
+alert_ment = 입니다.(위치: 포자의 바다)
+
+bossname = ㅁ티미니엘
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 페어리의 계곡)
+alert_ment = 입니다.(위치: 페어리의 계곡)
+
+bossname = ㅁ발보
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 사냥꾼의 계곡)
+alert_ment = 입니다.(위치: 사냥꾼의 계곡)
+
+bossname = ㅁ셀루
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 티막 오크 전초기지)
+alert_ment = 입니다.(위치: 티막 오크 전초기지)
+
+bossname = ㅁ탈킨
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 도마뱀 초원)
+alert_ment = 입니다.(위치: 도마뱀 초원)
