--- a/test_setting.ini
+++ b/test_setting.ini
@@ -155,35 +155,41 @@ alert_ment = 입니다.(위치: 크루마탑 3층)
 bossname = ㅁ오르펜
 gentime = 12:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 포자의 바다)
-alert_ment = 입니다.(위치: 포자의 바다)
+before_alert_ment = 입니다.(위치: 오르펜의 둥지)
+alert_ment = 입니다.(위치: 오르펜의 둥지)
 
 bossname = ㅁ레피로
-gentime = 12:00
+gentime = 10:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 포자의 바다)
-alert_ment = 입니다.(위치: 포자의 바다)
+before_alert_ment = 입니다.(위치: 포자 확산지)
+alert_ment = 입니다.(위치: 포자 확산지)
 
 bossname = ㅁ티미니엘
-gentime = 12:00
+gentime = 8:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 페어리의 계곡)
-alert_ment = 입니다.(위치: 페어리의 계곡)
+before_alert_ment = 입니다.(위치: 티미니엘의 보금자리)
+alert_ment = 입니다.(위치: 티미니엘의 보금자리)
 
 bossname = ㅁ발보
-gentime = 12:00
+gentime = 5:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 사냥꾼의 계곡)
-alert_ment = 입니다.(위치: 사냥꾼의 계곡)
+before_alert_ment = 입니다.(위치: 산적 산채)
+alert_ment = 입니다.(위치: 산적 산채)
 
 bossname = ㅁ셀루
-gentime = 12:00
+gentime = 6:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 티막 오크 전초기지)
-alert_ment = 입니다.(위치: 티막 오크 전초기지)
+before_alert_ment = 입니다.(위치: 피아그리오의 제단)
+alert_ment = 입니다.(위치: 피아그리오의 제단)
 
 bossname = ㅁ탈킨
-gentime = 12:00
+gentime = 4:00
 nogencheck = 1
-before_alert_ment = 입니다.(위치: 도마뱀 초원)
-alert_ment = 입니다.(위치: 도마뱀 초원)
+before_alert_ment = 입니다.(위치: 레토리자드맨 부락)
+alert_ment = 입니다.(위치: 레토리자드맨 부락)
+
+bossname = ㅁ프라인
+gentime = 4:00
+nogencheck = 1
+before_alert_ment = 입니다.(위치: 상아탑 1층)
+alert_ment = 입니다.(위치: 상아탑 1층)
